multiple css bug & spacing fixs

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -218,7 +218,7 @@ body {
   box-shadow: 0 0 6px 0 rgba(189, 189, 189, 0.8);
   clear: both;
   padding: 0;
-  padding-bottom: 30px;
+  padding-bottom: 0px;
 }
 
 .inner_page_padding {
