--- a/app/assets/stylesheets/responsive.css.scss
+++ b/app/assets/stylesheets/responsive.css.scss
@@ -349,6 +349,7 @@ $standard_border_radius: 6px;
   .sub_heading_wrapper .sub_heading_button_set {
     float: left;
     margin-top: 10px;
+    clear: both;
   }
   .inline_specialities_dropdown_wrapper {
     float: left;
@@ -424,6 +425,12 @@ $standard_border_radius: 6px;
   .home_section_questions .home_top_section_left_column {
     padding-top: 0px;
   }
+  .lectures_inline_dropdown_wrapper {
+    display: none;
+  }
+  .sub_heading_button_set.notes_dropdown_wrapper {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 1110px) {
@@ -496,9 +503,7 @@ $standard_border_radius: 6px;
   .questions_answers_main_question .question_comments_outer .comment_reply {
     background-position: 9% 10%;
   }
-  .lectures_inline_dropdown_wrapper {
-    display: none;
-  }
+
   a.podmedcis_button.green.print_notes_button {
     margin-right: 0px;
   }
@@ -895,6 +900,7 @@ $standard_border_radius: 6px;
   .header_column {
     width: 100%;
     height: 470px;
+    overflow-y: scroll;
     float: left;
   }
   .inner_header_column_divide {
@@ -905,7 +911,7 @@ $standard_border_radius: 6px;
     display: block;
   }
   .dashboard_header_wrapper {
-    height: 940px;
+    height: auto;
     width: 100%;
     border-bottom: solid 1px #E8E8E8;
   }
@@ -1427,6 +1433,13 @@ $standard_border_radius: 6px;
 }
 
 @media screen and (max-width: 650px) {
+  .footer .footer_right {
+    float: left;
+    width: auto;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    clear: both;
+  }
   .index_video_wrapper {
     width: 90%;
     height: auto;
