--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -724,7 +724,7 @@ div.k-chart {
   height: 100%;
   border-radius: 50%;
   background-color: #fff;
-  border: 4px solid #FFF;
+  border: 6px solid #FFF;
   -moz-box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2);
@@ -4944,7 +4944,7 @@ a.ask_question_icon_button:hover .ask_question_button_tooltip {
   padding-top: 20px;
 }
 .dashboard_header_columns_title {
-  font-size: 20px;
+  font-size: 16px;
   color: #ff414e;
   font-weight: bold;
 }
